[package]
name = "rustysnes-libretro"
description = "Cycle-accurate SNES emulator libretro core wrapper"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "staticlib"]

[lints]
workspace = true

[dependencies]
# Not referenced directly in this crate's own source, but required: `rust_libretro::
# input_descriptors!` expands to code referencing `libc::c_char` in the CALLING crate's scope
# (confirmed via the macro's definition in `rust-libretro`'s own `macros.rs`), so this must stay a
# direct dependency here even though `grep`-ing this crate's `src/` alone won't show a use of it.
libc = "0.2"
rust-libretro = "0.3.2"

[dependencies.rustysnes-core]
path = "../rustysnes-core"
default-features = true
