[package]
name = "rustysnes-monetization"
description = "RustySNES: dormant entitlement/ad-pacing policy scaffold (mobile-only, never a dependency of the deterministic core)"
version = "1.20.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
keywords = ["snes", "emulator", "mobile", "uniffi"]
categories = ["emulators", "games"]

[lib]
# Same shape as `rustysnes-mobile`'s identical rationale: `cdylib` for Android's JNI loader and
# iOS's `.xcframework` packaging, `staticlib` for iOS static linking, `rlib` so `cargo test` on
# the host works without any mobile toolchain. Unlike `rustysnes-android`/`rustysnes-ios`, this
# crate has zero platform-specific dependencies (no wgpu/JNI/UIKit) -- every target here,
# including the host, builds and tests for real in this environment.
crate-type = ["cdylib", "staticlib", "rlib"]

[features]
# Same opt-in shape as `rustysnes-mobile`'s identical `bindgen` feature -- see that crate's
# Cargo.toml comment for the full rationale (keeps `uniffi/cli` off every real mobile build).
bindgen = ["uniffi/cli"]

[[bin]]
name = "uniffi-bindgen"
required-features = ["bindgen"]

[lints]
workspace = true

[dependencies]
uniffi = "0.29"
