[package]
name = "rustysnes-ppu"
version = "1.20.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[features]
default = ["std"]
std = []
# The per-dot PPU compositor (`docs/adr/0014`, ticket T-CA-10) is now the ONLY compositor — the batch
# `render_scanline`/`compose_dac` path it replaced has been removed (Phase 6 T-CA-10, "single code
# path"). It composites the visible line one dot at a time with live registers, so a CGRAM/OAM access
# during active display hits the color/sprite the PPU is drawing, not the CPU-programmed index. It is
# `no_std`-clean, so there is no compositor feature to toggle.
# HD texture pack tile-identity hashing + the `Ppu`-side `TileTag` recording hook (`v1.3.0`,
# `hdtag` module + `Ppu::set_hd_pack_tagging`/`Ppu::tile_tags`) -- off by default, purely
# additive, `no_std`-clean (xxhash-rust's `xxh3` needs no allocator beyond `alloc`, already a
# crate dependency). Disabled entirely from the `no_std` CI build.
hd-pack = ["dep:xxhash-rust"]

[dependencies]
bitflags = "2"
rustysnes-cart = { path = "../rustysnes-cart", version = "1.4.0", default-features = false }
rustysnes-savestate = { path = "../rustysnes-savestate", version = "1.4.0" }
xxhash-rust = { version = "0.8", optional = true, features = ["xxh3"] }

[lints]
workspace = true
