[package]
name = "rustysnes-test-harness"
version = "1.20.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[features]
# Phase 6 (T-CA-10): per-dot is on by default (matching `rustysnes-core`'s flipped default), so this
# crate's own `#[cfg(feature = "per-dot-compositor")]` code (e.g. the golden gate's documented gaps)
# tracks the actual rendered path. The batch path is `--no-default-features`.
default = ["per-dot-compositor"]
test-roms = []          # compiles the committed CC0/public-domain suites + integration tests
commercial-roms = []    # the local-dump oracle (ROMs gitignored; commit only screenshots/.snap)
# Builds the accurate PPU path (`docs/adr/0014`, T-CA-10) so the golden corpus can be run flag-ON.
# Flag-ON is byte-identical EXCEPT on `undisbeliever/inidisp_forgot_to_force_blank` (the one corpus
# ROM that writes CGRAM mid-active-display) — the in-render redirect changes its frame by design;
# that frame's hardware-accuracy is pending reference cross-validation before the flag is trusted.
per-dot-compositor = ["rustysnes-core/per-dot-compositor"]

[dependencies]
rustysnes-core = { path = "../rustysnes-core", version = "1.4.0" }

[dev-dependencies]
insta = "1"
serde_json = "1"
rustysnes-cpu = { path = "../rustysnes-cpu", version = "1.4.0" }
rustysnes-apu = { path = "../rustysnes-apu", version = "1.4.0" }
rustysnes-savestate = { path = "../rustysnes-savestate", version = "1.4.0" }

[lints]
workspace = true
