[package]
name = "rustysnes-test-harness"
version = "1.20.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[features]
# The `per-dot-compositor` flip (T-CA-10) made the per-dot PPU `rustysnes-core`'s DEFAULT, and this
# crate consumes `rustysnes-core` with its default features (no `default-features = false`), so the
# harness ALWAYS renders through the per-dot path. There is therefore no harness-level compositor
# feature to toggle — a `per-dot-compositor` passthrough here would have been vestigial (it would
# re-enable a core default that is already on) and, worse, misleading: gating this crate's own
# `#[cfg]` code on it decoupled the cfg from the compositor actually running and broke
# `--no-default-features` runs. The batch compositor remains reachable only by building
# `rustysnes-core` itself with `--no-default-features` (the `no_std` gate); it is slated for removal.
test-roms = []          # compiles the committed CC0/public-domain suites + integration tests
commercial-roms = []    # the local-dump oracle (ROMs gitignored; commit only screenshots/.snap)

[dependencies]
rustysnes-core = { path = "../rustysnes-core", version = "1.4.0" }

[dev-dependencies]
insta = "1"
serde_json = "1"
rustysnes-cpu = { path = "../rustysnes-cpu", version = "1.4.0" }
rustysnes-apu = { path = "../rustysnes-apu", version = "1.4.0" }
rustysnes-savestate = { path = "../rustysnes-savestate", version = "1.4.0" }

[lints]
workspace = true
