[package]
name = "rustysnes-test-harness"
version = "1.20.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[features]
# The per-dot PPU compositor is the only compositor (T-CA-10 "single code path"; the batch path was
# removed), so there is no compositor feature anywhere in the tree and nothing for this crate to
# toggle — it always renders through the per-dot PPU, and this crate's own `#[cfg]` code (the golden
# gate's documented gaps) is unconditional.
test-roms = []          # compiles the committed CC0/public-domain suites + integration tests
commercial-roms = []    # the local-dump oracle (ROMs gitignored; commit only screenshots/.snap)

[dependencies]
rustysnes-core = { path = "../rustysnes-core", version = "1.4.0" }

[dev-dependencies]
insta = "1"
serde_json = "1"
rustysnes-cpu = { path = "../rustysnes-cpu", version = "1.4.0" }
rustysnes-apu = { path = "../rustysnes-apu", version = "1.4.0" }
rustysnes-savestate = { path = "../rustysnes-savestate", version = "1.4.0" }

[lints]
workspace = true
